Attempt to implement 2fa checking

--- a/api/src/main/resources/workbench.yaml
+++ b/api/src/main/resources/workbench.yaml
@@ -1326,6 +1326,8 @@ definitions:
           $ref: "#/definitions/InstitutionalAffiliation"
       requestedIdVerification:
         type: boolean
+      twoFactorEnabled:
+        type: boolean
 
 
   InstitutionalAffiliation:
