--- a/public-api/src/main/resources/public-api.yaml
+++ b/public-api/src/main/resources/public-api.yaml
@@ -49,6 +49,28 @@ paths:
           schema:
             $ref: "#/definitions/QuestionConceptListResponse"
 
+  /v1/databrowser/concept-analysis-results:
+    get:
+      security: []
+      tags:
+        - dataBrowser
+
+      description: Gets analysis results for concept
+      operationId: "getConceptAnalysisResults"
+      parameters:
+        - in: query
+          name: concept-ids
+          type: array
+          items:
+            type: string
+          required: true
+          description: concept id
+      responses:
+        200:
+          description: A collection of analysis for concept
+          schema:
+            $ref: "#/definitions/ConceptAnalysisListResponse"
+
   /v1/databrowser/participant-count:
     get:
       security: []
@@ -83,6 +105,43 @@ paths:
           schema:
             $ref: "#/definitions/DbDomainListResponse"
 
+  /v1/databrowser/advanced-concept-search:
+    get:
+      security: []
+      tags:
+        - dataBrowser
+      description: Gets list of matched concepts
+      operationId: "getAdvancedConceptSearch"
+      parameters:
+        - in: query
+          name: keyword
+          type: string
+          required: true
+          description: search word
+        - in: query
+          name: conceptFilter
+          type: string
+          required: false
+          description: concept filter to filter standard concepts
+        - in: query
+          name: vocabularyIds
+          type: array
+          items:
+            type: string
+          required: false
+          description: vocabulary ids
+        - in: query
+          name: domainIds
+          type: array
+          items:
+            type: string
+          required: false
+          description: domain ids
+      responses:
+        200:
+          description: A collection of matched concepts
+          schema:
+            $ref: "#/definitions/ConceptListResponse"
 
   /v1/databrowser/db-domains:
     get:
@@ -462,3 +521,35 @@ definitions:
         type: "array"
         items:
           $ref: "#/definitions/DbDomain"
+
+  ConceptAnalysis:
+    type: object
+    required:
+      - conceptId
+    properties:
+      conceptId:
+        description: concept id
+        type: string
+      genderAnalysis:
+        description: gender analysis
+        type: object
+        $ref: "#/definitions/Analysis"
+      ageAnalysis:
+        description: age analysis
+        type: object
+        $ref: "#/definitions/Analysis"
+
+  ConceptAnalysisListResponse:
+    type: object
+    required:
+       - items
+    properties:
+      items:
+        type: array
+        items:
+          $ref: "#/definitions/ConceptAnalysis"
+
+  StandardConceptFilter:
+    type: string
+    description: filter on whether standard, non-standard, or all concepts should be returned\
+    enum: &STANDARD_CONCEPT_FILTER [ALL_CONCEPTS, STANDARD_CONCEPTS, NON_STANDARD_CONCEPTS]
