--- a/public-api/src/main/resources/public-api.yaml
+++ b/public-api/src/main/resources/public-api.yaml
@@ -126,30 +126,11 @@ paths:
       description: Gets list of matched concepts
       operationId: "getAdvancedConceptSearch"
       parameters:
-        - in: query
-          name: keyword
-          type: string
-          required: true
-          description: search word
-        - in: query
-          name: conceptFilter
-          type: string
-          required: false
-          description: concept filter to filter standard concepts
-        - in: query
-          name: vocabularyIds
-          type: array
-          items:
-            type: string
-          required: false
-          description: vocabulary ids
-        - in: query
-          name: domainIds
-          type: array
-          items:
-            type: string
-          required: false
-          description: domain ids
+        - in: body
+          name: request
+          description: search concept request
+          schema:
+            $ref: "#/definitions/SearchConceptsRequest"
       responses:
         200:
           description: A collection of matched concepts
@@ -566,3 +547,39 @@ definitions:
     type: string
     description: filter on whether standard, non-standard, or all concepts should be returned\
     enum: &STANDARD_CONCEPT_FILTER [ALL_CONCEPTS, STANDARD_CONCEPTS, NON_STANDARD_CONCEPTS]
+  Domain:
+    type: string
+    description: filter on the domain in which concepts should be returned
+    enum: &DOMAIN [OBSERVATION, PROCEDURE, DRUG, CONDITION, MEASUREMENT, DEVICE, RACE, GENDER, ETHNICITY]
+
+  SearchConceptsRequest:
+    type: object
+    required:
+      - query
+    properties:
+      query:
+        type: string
+        description: >
+            A query string that can be used to match a subset of the name (case-insensitively),
+            the entire code value (case-insensitively), or the concept ID.
+      standardConceptFilter:
+        description: >
+            STANDARD_CONCEPTS if only standard concepts should be returned,
+            NON_STANDARD_CONCEPTS if only non-standard
+            concepts should be returned; defaults to ALL_CONCEPTS, meaning both
+            standard and non-standard concepts will be returned.
+        $ref: "#/definitions/StandardConceptFilter"
+      vocabularyIds:
+        type: array
+        items:
+          type: string
+        description: The vocabulary ID for the concepts returned (e.g. SNOMED, RxNorm)
+      domain:
+        description: >
+            The domain for the concepts returned (e.g. OBSERVATION, DRUG). Note that this may map
+            to multiple domain ID values in OMOP.
+        $ref: "#/definitions/Domain"
+      maxResults:
+        type: integer
+        format: int32
+        description: The maximum number of results returned. Defaults to 25.
