--- a/public-api/build.gradle
+++ b/public-api/build.gradle
@@ -95,6 +95,7 @@ dependencies {
   providedCompile group: 'javax.servlet', name: 'javax.servlet-api', version:'3.1.0'
 
   compile project(':common-api')
+  testCompile project(":common-api").sourceSets.test.output
   compile 'mysql:mysql-connector-java:+'
   compile 'com.google.cloud.sql:mysql-socket-factory:+'
   compile 'com.google.appengine:appengine:+'
