--- a/public-api/src/main/resources/application.properties
+++ b/public-api/src/main/resources/application.properties
@@ -19,3 +19,4 @@ spring.datasource.max-idle=5
 spring.datasource.min-idle=1
 
 spring.jpa.hibernate.ddl-auto=none
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
