--- a/api/build.gradle
+++ b/api/build.gradle
@@ -185,8 +185,8 @@ dependencies {
 
   providedCompile group: 'javax.servlet', name: 'javax.servlet-api', version:'3.1.0'
 
-  compile project(path: ':common-api',configuration: 'default')
-  testCompile project(path: ':common-api', configuration: 'testArchives')
+  compile project(path: ':common-api')
+  testCompile project(path: ':common-api')
   compile 'com.google.api-client:google-api-client-appengine:1.23.0'
   compile 'mysql:mysql-connector-java:+'
   compile 'com.google.cloud.sql:mysql-socket-factory:+'
