--- a/public-api/build.gradle
+++ b/public-api/build.gradle
@@ -95,7 +95,7 @@ dependencies {
   providedCompile group: 'javax.servlet', name: 'javax.servlet-api', version:'3.1.0'
 
   implementation project(path: ':common-api', configuration: 'default')
-  testCompile project(path: ':common-api')
+  testCompile files(project(':common-api').sourceSets.test.output.classesDir)
   compile 'mysql:mysql-connector-java:+'
   compile 'com.google.cloud.sql:mysql-socket-factory:+'
   compile 'com.google.appengine:appengine:+'
