common api project issues

--- a/api/build.gradle
+++ b/api/build.gradle
@@ -187,6 +187,8 @@ dependencies {
 
   implementation project(path: ':common-api', configuration: 'default')
   testCompile files(project(':common-api').sourceSets.test.output.classesDir)
+  evaluationDependsOn(':common-api')
+  compileTestJava.dependsOn tasks.getByPath(':common-api:testClasses')
   compile 'com.google.api-client:google-api-client-appengine:1.23.0'
   compile 'mysql:mysql-connector-java:+'
   compile 'com.google.cloud.sql:mysql-socket-factory:+'
