--- a/public-api/build.gradle
+++ b/public-api/build.gradle
@@ -97,7 +97,7 @@ dependencies {
   implementation project(path: ':common-api', configuration: 'default')
   testCompile files(project(':common-api').sourceSets.test.output)
   evaluationDependsOn(':common-api')
-  compileTestJava.dependsOn tasks.getByPath(':common-api:testClasses')
+  compileTestJava.dependsOn tasks.getByPath(':common-api')
   compile 'mysql:mysql-connector-java:+'
   compile 'com.google.cloud.sql:mysql-socket-factory:+'
   compile 'com.google.appengine:appengine:+'
