--- a/public-api/build.gradle
+++ b/public-api/build.gradle
@@ -93,8 +93,7 @@ repositories {   // repositories for Jar's you access in your code
 dependencies {
   // To show the dependency tree, try: ./project.rb gradle dependencies --configuration compile
   providedCompile group: 'javax.servlet', name: 'javax.servlet-api', version:'3.1.0'
-
-  implementation project(path: ':common-api', configuration: 'default')
+  compile project(path: ':common-api', configuration: 'compile')
   testCompile files(project(':common-api').sourceSets.test.output)
   evaluationDependsOn(':common-api')
   compileTestJava.dependsOn tasks.getByPath(':common-api')
