--- a/api/build.gradle
+++ b/api/build.gradle
@@ -185,7 +185,7 @@ dependencies {
 
   providedCompile group: 'javax.servlet', name: 'javax.servlet-api', version:'3.1.0'
 
-  compile project(path:':common-api', configuration: 'compile')
+  compile project(":common-api")
   testCompile files(project(':common-api').sourceSets.test.output)
   evaluationDependsOn(':common-api')
   compileTestJava.dependsOn tasks.getByPath(':common-api')
