--- a/public-api/build.gradle
+++ b/public-api/build.gradle
@@ -68,7 +68,6 @@ sourceSets {
     runtimeClasspath += generated.output
   }
   test {
-
     compileClasspath += generated.output
     runtimeClasspath += generated.output
   }
@@ -89,12 +88,14 @@ clean.doFirst {
 repositories {   // repositories for Jar's you access in your code
   jcenter()
 }
-
+artifacts {
+  sharedTestRuntime sharedTestJar
+}
 dependencies {
   // To show the dependency tree, try: ./project.rb gradle dependencies --configuration compile
   providedCompile group: 'javax.servlet', name: 'javax.servlet-api', version:'3.1.0'
   compile project(":common-api")
-  testCompile files(project(':common-api').sourceSets.test.output)
+  testCompile project(path: ":common-api", configuration: "sharedTestRuntime")
   compile 'mysql:mysql-connector-java:+'
   compile 'com.google.cloud.sql:mysql-socket-factory:+'
   compile 'com.google.appengine:appengine:+'
