--- a/api/build.gradle
+++ b/api/build.gradle
@@ -185,7 +185,7 @@ dependencies {
   providedCompile group: 'javax.servlet', name: 'javax.servlet-api', version:'3.1.0'
 
   compile project(":common-api")
-  testCompile project(':A').sourceSets.test.output
+  testCompile project(':common-api').sourceSets.test.output
   compile 'com.google.api-client:google-api-client-appengine:1.23.0'
   compile 'mysql:mysql-connector-java:+'
   compile 'com.google.cloud.sql:mysql-socket-factory:+'
