--- a/api/src/main/resources/workbench.yaml
+++ b/api/src/main/resources/workbench.yaml
@@ -834,6 +834,11 @@ definitions:
       projectId:
         type: string
         description: The cloud project in which this app is running.
+      enforceRegistered:
+        type: boolean
+        description: |
+          Whether the user's data access level should gate other Workbench functionality, namely
+          to functionality requiring CDR access.
       publicApiKeyForErrorReports:
         type: string
         description: |
