--- a/api/config/config_staging.json
+++ b/api/config/config_staging.json
@@ -3,7 +3,7 @@
     "billingAccountId": "014D91-FCB792-33D2C0",
     "billingProjectPrefix": "aou-rw-staging-",
     "debugEndpoints": false,
-    "enforceRegistered": false,
+    "enforceRegistered": true,
     "jupyterUserScriptUri": "gs:\/\/all-of-us-rw-staging-scripts/setup_notebook_cluster.sh",
     "registeredDomainName": "all-of-us-registered-staging"
   },
