--- a/api/build.gradle
+++ b/api/build.gradle
@@ -183,7 +183,7 @@ dependencies {
   // To show the dependency tree, try: ./project.rb gradle dependencies --configuration compile
 
   providedCompile group: 'javax.servlet', name: 'javax.servlet-api', version:'3.1.0'
-
+  compileTestJava.dependsOn tasks.getByPath(':common-api:testClasses')
   compile project(":common-api")
   testCompile project(path: ':common-api', configuration: 'testClasses')
   compile 'com.google.api-client:google-api-client-appengine:1.23.0'
