--- a/api/config/config_local.json
+++ b/api/config/config_local.json
@@ -31,5 +31,8 @@
     "adminIdVerification": "stable-environment-manual-id-verification-requests@fake-research-aou.org",
     "supportGroup": "all-of-us-workbench-eng@googlegroups.com",
     "verifiedSendingAddress": "all-of-us-workbench-eng@googlegroups.com"
+  },
+  "mandrill": {
+    "apiKey": "test-api-key-should-go-here"
   }
 }
