common api project issues

--- a/common-api/build.gradle
+++ b/common-api/build.gradle
@@ -19,14 +19,17 @@ repositories {   // repositories for Jar's you access in your code
   jcenter()
 }
 
+configurations {
+  testArtifacts{
+    extendsFrom(testRuntime)
+  }
+}
+
 task testJar(type: Jar) {
   classifier = 'test'
   from sourceSets.test.output
 }
 
-configurations {
-  testArtifacts
-}
 
 artifacts {
   testArtifacts testJar
