Freemabd1/rw 607 Use the in memory gender,race,ethinicity cache to fix review query (#895)
* RW-607 refactored getting demo info from memory.

* RW-607 added integration test for this refactor.

* RW-607 added ethnicity to concept.csv

* RW-607 fixed test.

* RW-607 fixed test.

* RW-607 codacy and ui test case fix.

* RW-607 ui test case fix.

* RW-607 fixed date to string.

--- a/api/src/main/resources/cb_review_api.yaml
+++ b/api/src/main/resources/cb_review_api.yaml
@@ -494,7 +494,7 @@ definitions:
 
   ParticipantCohortStatusColumns:
     type: string
-    enum: [participantId, status, gender, birthDate, race, ethnicity]
+    enum: [PARTICIPANTID, STATUS, GENDER, BIRTHDATE, RACE, ETHNICITY]
 
   ReviewColumns:
     type: string
@@ -555,8 +555,7 @@ definitions:
       gender:
         type: string
       birthDate:
-        type: integer
-        format: int64
+        type: string
       raceConceptId:
         type: integer
         format: int64
